--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -126,11 +126,13 @@ hr{
     margin-top: 48px;
 }
 .nameIdList{
-    margin-top: 11px;
-    font-size: 12px;
+    font-size: 16px !important;
+    margin: 7px !important;
 }
 .nameIdEdit{
     font-size: 48px;
+    font-weight: 300;
+    margin: 14px;
 }
 .circle{
     border-radius: 100px;
@@ -139,7 +141,7 @@ hr{
     margin: 12px;
     text-align: center;
     color: white;
-    border: solid;
+    border: solid 1px white;
     
 }
 .editCircle{
@@ -151,6 +153,7 @@ hr{
     margin-top: 170px;
     border: solid;
     margin-left: 60px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .contact-info{
     cursor: pointer;
@@ -185,9 +188,11 @@ hr{
     color: white;
     border: solid white 3px;
     margin-right: 36px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .nameId{
     font-size: 36px;
+    margin: 22px;
 }
 .contactCard{
     margin-left: 24px;
@@ -262,6 +267,7 @@ hr{
     margin-left: 30px;
     margin-top: 12px;
 }
+
 .line2{
     background-color: #2AAAE2;
     width: 70px;
@@ -280,6 +286,7 @@ hr{
     display: flex;
     flex-direction: column;
     margin-top: 36px;
+
 }
 .inputField{
     border: none;
@@ -289,6 +296,7 @@ hr{
     height: 36px;
     padding-left: 12px;
     margin-right: -70px;
+    font-size: 15px !important;
 }
 .inputField:hover{
     border: 2px solid #2AAAE2 !important;
@@ -399,6 +407,7 @@ hr{
     background-color: white;
     cursor: pointer;
     margin-right: 12px;
+    font-size: 15px;
 }
 .deleteButton:hover{
     border: 1px solid #2AAAE2;
@@ -424,6 +433,7 @@ hr{
     cursor: pointer;
     margin-right: 12px;
     color: white;
+    font-size: 15px;
 }
 .closeButton{
     width: 90px;
@@ -453,6 +463,7 @@ hr{
     display: flex;
     flex-direction: row;
     font-size: 15px;
+
 }
 .save-button-div{
     display: flex;
