--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -399,6 +399,42 @@ hr{
     color: #2AAAE2;
     font-weight: 500;
   }
+
+  .cancel-button-div {
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    margin-right: 18px;
+    align-items: center;
+    margin-left: 3px;
+  }
+  .cancel-img-black{
+    width: 20px; 
+    height: 20px; 
+    margin-bottom: -4px;
+  }
+  .cancel-img-blue {
+    width: 20px; 
+    height: 20px; 
+    margin-right: 6px;
+    margin-bottom: -4px;
+  }
+  .cancel-img-blue {
+    display: none; 
+  }
+  .editButtons:hover{
+    color: #2AAAE2;
+    font-weight: 500;
+  }
+  .cancel-text{
+    font-size: 15px;
+}
+.editButtons{
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+}
 .group-header{
     margin-left: 36px;
 }
@@ -487,22 +523,13 @@ hr{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border: 1px solid #2AAAE2;
 }
-.editButtons{
-    display: flex;
-    flex-direction: row;
-    font-size: 15px;
 
-}
 .save-button-div{
     display: flex;
     align-items: center;
     margin-left: 3px;
 }
-.cancel-button-div{
-    display: flex;
-    align-items: center;
-    margin-left: 3px;
-}
+
 .create-button-div{
     display: flex;
     align-items: center;
@@ -512,19 +539,10 @@ hr{
     width: 18px;
     margin-left: 4px;
 }
-.cancel-img-black{
-    width: 18px;
-}
-.cancel-img-blue{
-    width: 18px;
-}
 .create-img{
     width: 18px;
 }
 .create-text{
-    font-size: 15px;
-}
-.cancel-text{
     font-size: 15px;
 }
 .success {
