responsive header, help, Legal Notice and Privacy Policy

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,6 +1,7 @@
 <header>
+  <img class="join-logo-header" src="./assets/img/join-logo.svg" alt="join-logo">
   <div class="headline-header">
-    <b>Kanban Project Management Tool</b>
+    <b >Kanban Project Management Tool</b>
   </div>
   <div class="user-profil-initials-container">
     <svg onclick="loadHelp()" id="helpIcon" class="user-profil-question-mark" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
