--- a/styles/add_tasks.css
+++ b/styles/add_tasks.css
@@ -981,9 +981,8 @@ line-height: 120%; /* 24px */
     font-family: "Inter", sans-serif;
     font-size: 20px;
     font-weight: 400;
-    line-height: 120%; /* 24px */
+    line-height: 24px;
 }
-
 
 .underListContact{    
     cursor: pointer;
@@ -1156,6 +1155,7 @@ line-height: 120%; /* 24px */
    position: absolute;  
    display: flex;
    padding-inline-start: 0px;
+   height: 10px;
    flex-direction: column;
    border-radius: 10px;
    background: var(--white, #FFF); 
