--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -128,6 +128,7 @@
  /* visibility: hidden; */
   display: flex;
   align-items: center;
+  margin-top: 1062px;
   width: 100%;
   height: 80px;
   justify-content: space-around;
