--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -124,8 +124,17 @@
 
 /*side bar responsive*/
 
+.responsivElements{
+  width:100%;
+  background-color: #1aa7e4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .box-sizingResponsiv {
  /* visibility: hidden; */
+ 
   display: flex;
   align-items: center;
   margin-top: 1062px;
@@ -139,21 +148,8 @@
 }
 
 .sidebarLinkResponsiv {
-  display: flex;
-  padding: 2px 16px;
-  justify-content: space-around;
-  align-items: center;
-  display: flex;
   width: 76px;
   height: 76px;
-}
-
-.sidebarMenuTextResponsiv {
-  font-family: "Inter", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 120%;
 }
 
 .summaryBtHover{
@@ -161,15 +157,11 @@
 }
 
 .sidebarCategoryResponsiv:hover .summaryBtHover{
-  display: block;
   display: flex;
   border-radius: 18px;
   width: 76px;
   height: 76px;
   background-color: #091931;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 } 
 
 .summaryBt{
@@ -185,19 +177,15 @@
 }
 
 .sidebarCategoryResponsiv:hover .addTaskBtHover{
-  display: block;
   display: flex;
   border-radius: 18px;
   width: 76px;
   height: 76px;
   background-color: #091931;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 } 
 
 .addTaskBt{
-  display: block;
+  display: block; 
 }
 
 .sidebarCategoryResponsiv:hover .addTaskBt{
@@ -209,15 +197,11 @@
 }
 
 .sidebarCategoryResponsiv:hover .boardBtHover{
-  display: block;
   display: flex;
   border-radius: 18px;
   width: 76px;
   height: 76px;
   background-color: #091931;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 } 
 
 .boardBt{
@@ -233,15 +217,11 @@
 }
 
 .sidebarCategoryResponsiv:hover .contactsBtHover{
-  display: block;
   display: flex;
   border-radius: 18px;
   width: 76px;
   height: 76px;
   background-color: #091931;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 } 
 
 .contactsBt{
