--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -600,7 +600,7 @@ justify-content: center;
     .button-add-contact-mobile{
         border: 1px solid var(--Version-2-main-color, #2A3647);
         background: var(--Version-2-main-color, #2A3647);
-    
+        cursor: pointer;
         display: inline-flex;
         justify-content: center;
         align-items: center;
@@ -630,7 +630,8 @@ justify-content: center;
         border-top-left-radius: 25px;
         border-bottom-left-radius: 0px;
         width: 396px;
-        height: 351px;
+        height: 200px;
+/*        height: 351px;*/
         padding: 66px 24px;
         flex-direction: column;
         justify-content: center;
@@ -642,5 +643,21 @@ justify-content: center;
         width: 24px;
         height: 24px;
         flex-shrink: 0;
+    }
+    .addContactMiddle{
+        display: flex;
+        flex-direction: row;
+        background-color: white;
+        width: 396px;
+        height: 1px;
+    }
+    .input{
+        margin-right: 12px;
+        margin-left: 12px;
+    }
+    .addCircle{
+        position: fixed;
+        left: 60px;
+        top: 110px;
     }
 }
