--- a/styles/loginpage.css
+++ b/styles/loginpage.css
@@ -9,7 +9,6 @@
 }
 
 body {
-  background-color: rgb(246, 247, 248);
   font-family: "Inter", sans-serif;
   display: flex;
   overflow: hidden;
@@ -19,11 +18,22 @@ body {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background: #f6f7f8;
-  z-index: 2;
+  z-index: 999;
+  background-color: rgba(246, 247, 248, 1);
 }
 
+
+
 .join-logo {
+  position: absolute;
+  width: 273px;
+  height: 334px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.join-logo-responsive {
   position: absolute;
   width: 273px;
   height: 334px;
@@ -41,7 +51,7 @@ body {
 /* transparen Animation */
 .animationJoinLogo.animated {
   animation: containerAnimation 625ms forwards;
-  animation-delay: 2s;
+  animation-delay: 1.8s;
 }
 
 @keyframes containerAnimation {
@@ -49,13 +59,24 @@ body {
     opacity: 1;
     visibility: visible;
   }
-  99% {
-    opacity: 0;
-    visibility: visible;
+  20% {
+    opacity: 0.8;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  60% {
+    opacity: 0.4;
+  }
+  80% {
+    opacity: 0.2;
+  }
+
+  95% {
+    visibility: hidden;
   }
   100% {
     opacity: 0;
-    visibility: hidden;
   }
 }
 
@@ -67,7 +88,6 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background: #f6f7f8;
   }
   100% {
     height: 121px;
@@ -75,13 +95,36 @@ body {
     top: 80px;
     left: 77px;
     transform: translateY(0);
-    background: #f6f7f800;
+  }
+}
+
+@keyframes logoAnimation-responsive {
+  0% {
+    height: 334px;
+    width: 273px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  100% {
+    position: absolute;
+    top: 35px;
+    left: 33px;
+    width: 64px;
+    height: 78px;
+    transform: translateY(0);
   }
 }
 
 .join-logo.animated {
   animation: logoAnimation 625ms forwards;
   animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+
+.join-logo-responsive.animated {
+  animation: logoAnimation-responsive 625ms forwards;
+  animation-delay: 1.5s;
   animation-fill-mode: forwards;
 }
 
@@ -106,6 +149,16 @@ body {
   position: absolute;
   top: 67px;
   right: 122px;
+  gap: 35px;
+}
+
+.sign-up-button-container-responsive {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  bottom: 80px;
   gap: 35px;
 }
 
@@ -172,7 +225,6 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 315px;
-  height: 89px;
   gap: 16px;
 }
 
@@ -415,10 +467,98 @@ body {
 
 @keyframes moveUpToCenter {
   from {
-      transform: translateY(100vh); /* Startet am unteren Bildschirmrand */
+    transform: translateY(100vh);
   }
   to {
-      transform: translateY(0); /* Bewegt sich zur Mitte des Bildschirms */
+    transform: translateY(0);
   }
 }
 
+@media (min-width: 900px) {
+  .sign-up-button-container-responsive {
+    display: none;
+  }
+  .join-logo-responsive {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .animationJoinLogo {
+    background-color: rgba(42, 54, 71, 1);
+  }
+
+  .join-logo {
+    display: none;
+  }
+
+  .sign-up-button-container {
+    display: none;
+  }
+
+  .jlogo {
+    position: absolute;
+    top: 37px;
+    left: 38px;
+    width: 64px;
+    height: 78px;
+  }
+
+  .log-in-container {
+    width: 396px;
+    height: 515px;
+    position: relative;
+    top: 0;
+    gap: 0;
+  }
+
+  .input-field-container {
+    width: 320px;
+    margin-top: 8px;
+  }
+  .remember-me-container {
+    width: 396px;
+  }
+  .headline-log-in-container {
+    margin-bottom: 24px;
+  }
+
+  .headline-log-in {
+    font-size: 47px !important;
+  }
+
+  .bottom-line {
+    width: 88px;
+  }
+
+  .submit-log-in-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .width-log-in-button {
+    width: 180px;
+  }
+
+  .submit-log-in-container {
+    gap: 10px;
+  }
+}
+
+@media (max-width: 500px) {
+  .log-in-container {
+    width: 320px;
+  }
+
+  .input-field {
+    width: 220px;
+  }
+
+  .input-field-container {
+    width: 240px;
+  }
+
+  .remember-me-container {
+    width: 240px;
+  }
+}
