--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -576,6 +576,12 @@ justify-content: center;
     animation: slide-left 0.5s linear both;
  }
  
+ .slide-top {
+	-webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+
  @keyframes slide-left {
     0% {
        transform: translateX(400px);
@@ -589,6 +595,27 @@ justify-content: center;
     }
  }
 
+@-webkit-keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
+    }
+  }
+  @keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+              transform: translateY(-100px);
+    }
+  }
+  
 
  @media(max-width: 600px){
     .hide-mobile-600px{
@@ -625,12 +652,13 @@ justify-content: center;
         width: 200px;
         margin-left: 10px;
         margin-right: 10px;
+        margin-top: -75px;
     }
     .addContactLeft{
         border-top-right-radius: 25px;
         border-top-left-radius: 25px;
         border-bottom-left-radius: 0px;
-        width: 290px;
+        width: 321px;
         height: 200px;
 /*        height: 351px;*/
         padding: 66px 24px;
@@ -640,16 +668,26 @@ justify-content: center;
         gap: 12px;
         flex-shrink: 0;
     }
+    .addContactRight{
+        height: 350px;
+        border-bottom-left-radius: 25px;
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 0;
+        width: 368px;
+    }
     .closeAddContact-mobile{
         width: 24px;
         height: 24px;
         flex-shrink: 0;
     }
+    .close-img-div {
+        display: none;
+    }
     .addContactMiddle{
         display: flex;
         flex-direction: row;
         background-color: white;
-        width: 396px;
+        width: 321px;
         height: 1px;
     }
     .input{
@@ -659,10 +697,52 @@ justify-content: center;
     }
     .addCircle{
         position: fixed;
-        left: 60px;
-        top: 110px;
+        left: 90px;
+        top: 40px;
+        width: 100px;
+        height: 100px;
+    }
+    .addCircle-image{
+        margin: 31px;
+        width: 38px;
     }
     .addContactPopup{
         left: 0;
+    }
+    .slide-left{
+        -webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    }
+    .inputFieldName{
+        width: 341px;
+    }
+    .logo-edit-input{
+        margin-right: 12px;
+        height: 16px;
+    }
+    .inputField{
+        margin-right: -36px;
+        width: 329px;
+    }
+    .addContactHeadline{
+        font-size: 36px;
+        margin-top: 42px;
+        margin-left: 0;
+        font-weight: 600;
+    }
+    .addContactHeadline2{
+        margin-left: 0;
+        font-weight: 300;
+    }
+    .line3{
+        margin-left: 0;
+        margin-top: 18px;
+    }
+    .createButton{
+        font-weight: 600;
+    }
+    .editButtons{
+        justify-content: center;
+        margin-left: 24px;
     }
 }
