--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -126,18 +126,15 @@
 
 .responsivElements{
   width:100%;
-  background-color: #1aa7e4;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .box-sizingResponsiv {
- /* visibility: hidden; */
- 
-  display: flex;
   align-items: center;
-  margin-top: 1062px;
+  display:flex;
+  bottom:0;
   width: 100%;
   height: 80px;
   justify-content: space-around;
